--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,38 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+@keyframes triangle-play {
+    from {
+      transform: translateX(0px);
+    }
+    to {
+      transform: translateX(4px);
+    }
+  }
+
+@keyframes heart-scale {
+    from {
+      scale: 1;
+    }
+    50% {
+      scale: 1.5;
+    }
+    100% {
+      scale: 1;
+    }
+  }
+
+@keyframes sparks-coloring {
+    100% {
+      fill: var(--fill-sparks-color);
+    }
+    0% {
+        opacity: 0;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
+  }
