--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,418 @@
 */
 
 .page {
+  color: var(--accent-color);
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--font), sans-serif;
+  font-size: 18px;
+  background-color: var(--background-color);
+  background-image: var(--background-image);
+  background-size: cover;
+  background-attachment: fixed;
+  font-variation-settings: 'wght' var(--font-weight);
 }
+
+.adaptiv__width {
+  inline-size: 100%;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 102px auto 100px;
+  max-inline-size: 700px;
+  border: 2px solid var(--accent-color);
+  font-family: var(--font-accent), sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  background-color: var(--background-color);
+}
+
+.header__title {
+  margin: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem) 0 21px;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-align: center;
+}
+
+.header__logo {
+  display: block;
+  margin-bottom: 20px;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: 0 0 23px 18px;
+}
+
+.theme-menu__button {
+  padding: 0;
+  position: relative;
+  border: none;
+  background-color: transparent;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.theme-menu__button::before {
+  content: "▶";
+  position: absolute;
+  opacity: 0;
+  transform: translateX(0px);
+  animation-name: triangle-play;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  inset-inline-start: -20px;
+  inset-block-start: 0;
+  animation-duration: 0.5s;
+}
+
+.theme-menu__button[disabled]::before {
+  opacity: 0.6;
+}
+
+.theme-menu__button[disabled] {
+  opacity: 0.6;
+  pointer-events: none;
+  transition-timing-function: ease;
+  transition-duration: 0.3s;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: relative;
+  display: block;
+  background-color: var(--accent-color);
+  transition-duration: 0.3s;
+  transform: scaleX(0);
+  transform-origin: left center;
+  block-size: 2px;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus-visible::after {
+  transition-duration: 0.3s;
+  transform: scaleX(1);
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  align-items: center;
+  max-inline-size: 700px;
+}
+
+.cards {
+  display: grid;
+  gap: 53px;
+}
+
+.card {
+  border: 2px solid var(--accent-color);
+  background-color: var(--background-color);
+}
+
+.card__title {
+  padding: 5px 10px 6px;
+  border-bottom: 2px solid var(--accent-color);
+  font-size: 18px;
+  font-variation-settings: 'wght' var(--font-weight-bold);
+}
+
+.picture__block {
+  position: relative;
+}
+
+.picture__text {
+  inset-block-start: 20px;
+  inset-inline-end: 10px;
+  position: absolute;
+  z-index: 2;
+  opacity: 0.5;
+  color: var(--accent-color);
+  font-family: var(--font-accent);
+  font-size: 14px;
+  text-shadow: 
+    1px 0 0 var(--background-color),
+    1px 0 0 var(--background-color),
+    0 1px 0 var(--background-color),
+    0 1px 0 var(--background-color),
+    -1px 0 0 var(--background-color),
+    -1px 0 0 var(--background-color),
+    0 -1px 0 var(--background-color),
+    0 -1px 0 var(--background-color);
+    mix-blend-mode: hard-light;
+}
+
+@supports ((text-stroke: 1px var(--background-color)) or (-webkit-text-stroke: 1px var(--background-color))) {
+  .picture__text {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--background-color, #fff);
+    text-stroke: 1px var(--background-color, #fff);
+  }
+}
+
+.card__content {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  padding: 19px 25px 25px;
+  color: var(--accent-color);
+}
+
+.buttons {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  float: right;
+  margin: 0 25px 25px;
+  max-block-size: 38px; 
+}
+
+.card__icon-button {
+  border: 2px solid transparent;
+  background-color: transparent;
+  cursor: pointer;
+  inline-size: 43px;
+}
+
+.contour {
+  fill: var(--heart-contour);
+  transition-duration: 0.1s;
+}
+
+.core {
+  fill: transparent;
+  transition-delay: 0.03s;
+  transition-duration: 0.3s;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon:hover {
+  .core {
+    fill: var(--heart-contour);
+    transition: fill 0.3s linear;
+  }
+
+  .main-body {
+    fill: var(--heart-contour);
+    transition: fill 0.3s 0.05s linear;
+  }
+}
+
+.like-icon:active {
+  .core {
+    fill: var(--active-contour);
+    transition: fill 0.3s linear;
+  }
+
+  .main-body {
+    fill: var(--active-main-body);
+    transition: fill 0.3s 0.05s linear;
+  }
+}
+
+.like-icon.is-liked {
+  animation: icon-scaling 0.3s 0.1s ease-in reverse;
+
+  .core {
+    fill: #FF0000;
+    transition-delay: 0s;
+    transition-duration: 0.3s;
+  }
+
+  .main-body {
+    fill: #FF0000;
+    transition-delay: 0.05s;
+    transition-duration: 0.3s;
+  }
+
+  .contour {
+    fill: #FF0000;
+    transition-delay: 0.06s;
+    transition-duration: 0.3s;
+  }
+
+  .sparks {
+    animation-name: sparks-coloring;
+    fill: #f00;
+    animation-delay: 0.3s;
+    animation-timing-function: ease-in;
+    animation-duration: 0.3s;
+  }
+} 
+
+.is-liked .heart {
+  transform-origin: center;
+  animation-name: heart-scale;
+  animation-delay: 0.1s;
+  animation-direction: alternate;
+  animation-timing-function: ease-in;
+  animation-duration: 0.3s;
+}
+
+.card__like-button {
+  padding: 10px 0;
+  border: 2px solid var(--accent-color);
+  background-color: transparent;
+  color: var(--accent-color);
+  font-family: var(--font-accent), sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  inline-size: 130px; 
+  cursor: pointer;
+}
+
+.button {
+  position: relative;
+  padding: 0;
+  color: black;
+  background-color: var(--background-color);
+  cursor: pointer;
+  border: 2px solid var(--accent-color);
+}
+
+.button:after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: var(--accent-color);
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left center;
+}
+
+.button:hover::after {
+  transform: scale(1);
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0 0 var(--accent-color);
+  transition-duration: 0.3s;
+}
+
+.button__text {
+  position: relative;
+  z-index: 1;
+  color: var(--button-text-color);
+  font-family: var(--font-accent);
+  font-size: 14px;
+  mix-blend-mode: difference;
+}
+
+.footer {
+  padding-block: 50px 105px;
+}
+
+.button__save {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin: 0 auto;
+  padding: 15px 20px;
+  max-inline-size: 83vw;
+  font-family: var(--font-accent);
+  font-size: 14px;
+}
+
+.floppy {
+  position: relative;
+  z-index: 1;
+  color: var(--floopy-color); 
+  inline-size: 21px;
+  block-size: 21px;
+  mix-blend-mode: difference;
+}
+
+.modal[open] {
+  display: grid;
+  grid-template-columns: auto auto;
+  row-gap: 30px;
+  column-gap: clamp(12px, 2vw, 20px);
+  padding: 32px 42px;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: var(--font-accent), sans-serif;
+  text-transform: uppercase;
+  max-inline-size: 357px;
+  background-color: var(--background-color);
+  transition: opacity 0.3s ease-in-out;
+}
+
+.floppy-modal {
+  align-self: center;
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+.modal__button {
+  grid-column: 1 / -1;
+  text-transform: uppercase;
+  inline-size: 100%;
+}
+
+.modal__title {
+  font-size: 14px;
+  line-height: 1.5;
+  color: var(--accent-color);
+}
+
+.modal::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.filter_bright {
+  filter: brightness(220%);
+}
+.filter_gray {
+  filter: grayscale(0.8);
+}
+
+.filter_blur {
+  filter: blur(3.2rem);
+} 
+
+.filter_sepia {
+  filter: sepia(150%);
+}
+
+.filter_invert {
+  filter: invert(0.7);
+}
+
+.filter_opacity {
+  filter: opacity(0.8);
+}
+
+.filter_multiple {
+  filter: sepia(1) contrast(2) brightness(200%);
+}
+
+.filter_drop-shadow {
+  filter: drop-shadow(5px 15px 3px rgba(0, 0, 0, 0.8));
+}
+
