--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,41 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --font: 'Inter-Variable';
+    --font-accent: 'PressStart2P-Regular';
+
+    --accent-color: #000;
+    --background-color: #fff;
+
+    --heart-contour: #000;
+    --active-contour: #f00;
+    --active-main-body: #f00;
+
+    --font-weight: 400;
+    --font-weight-bold: 700;
+
+    --fill-sparks-color: #f00;
+    --floopy-color: #fff;
+
+    --button-text-color: #fff;
+
+    --background-image: repeating-linear-gradient(
+        to right, 
+        #d3d3d3 0,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ), 
+      repeating-linear-gradient(
+        to bottom, 
+        #d3d3d3 0,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      linear-gradient(
+        to bottom,
+        #e7e7e7 0.01%,
+        #1a1a1a
+      );
+  }
+}
