--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -6,6 +6,6 @@
 }
 
 @font-face {
-    font-family: 'PressStart2P-Regular';
+    font-family: 'PressStart2P';
     src: url(../fonts/PressStart2P-Regular.woff) format('woff');
 }
